--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <style>
  .paddin {
@@ -91,7 +91,7 @@ margin-top: -175px!important;
   <div class="navbar-fixed">
  	<nav class="z-depth-0 logow">
  		<div class="nav-wrapper white">
- 			<a href="index.html" class="brand-logo"><img class="logo1" src="images/logo.png"></img></a>
+ 			<a href="index.html" class="brand-logo"><img class="logo1" src="logo.png"></img></a>
  			<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
  			<ul class="right hide-on-med-and-down">
  				<li><a href="#team" class="waves-effect waves-light btn orange darken-4">Therapeuten</a></li>
@@ -138,7 +138,7 @@ margin-top: -175px!important;
       </div>
           <br><br>
       </div>
-  <div class="parallax"><img src="images/fysiopara.jpg" alt="Unsplashed background img 1">
+  <div class="parallax"><img src="fysiopara.jpg" alt="Unsplashed background img 1">
   </div>
   </div>
 
@@ -149,7 +149,7 @@ margin-top: -175px!important;
 	  
 <div class="col m4">
             <div class="icon-block">
-                <h2 class="center brown-text"><img class="responsive-img circle" src="images/diane.jpg"></img></h2>
+                <h2 class="center brown-text"><img class="responsive-img circle" src="diane.jpg"></img></h2>
                 <h6 class="center">Diane Meeuwissen</h6>
 					<p class="light">Specialisatie:<br> 
 						<ol>
@@ -161,7 +161,7 @@ margin-top: -175px!important;
 				
 <div class="col m4">
             <div class="icon-block">
-                <h2 class="center brown-text"><img class="responsive-img circle" src="images/karolien.jpg"></img></h2>
+                <h2 class="center brown-text"><img class="responsive-img circle" src="karolien.jpg"></img></h2>
                 <h6 class="center">Karolien Lemmens</h6>
 					<p class="light">Specialisatie:<br> 
 						<ol>
@@ -172,7 +172,7 @@ margin-top: -175px!important;
 
 <div class="col m4">
             <div class="icon-block">
-				<h2 class="center brown-text"><img class="responsive-img circle" src="images/toon.jpg"></img></h2>
+				<h2 class="center brown-text"><img class="responsive-img circle" src="toon.jpg"></img></h2>
 				<h6 class="center">Toon Clement</h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
@@ -191,7 +191,7 @@ margin-top: -175px!important;
  </div>
 <div class="col m4">
 			<div class="icon-block">
-				<h2 class="center brown-text"><img class="responsive-img circle" src="images/lore.jpg"></img></h2>
+				<h2 class="center brown-text"><img class="responsive-img circle" src="lore.jpg"></img></h2>
 				<h6 class="center">Lore Huijers</h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
@@ -206,7 +206,7 @@ margin-top: -175px!important;
  
  <div class="col m4">
 			<div class="icon-block">
-				<h2 class="center brown-text"><img class="responsive-img circle" src="images/anne.jpg"></img></h2>
+				<h2 class="center brown-text"><img class="responsive-img circle" src="anne.jpg"></img></h2>
 				<h6 class="center">Anne Ceulemans </h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
@@ -237,7 +237,7 @@ margin-top: -175px!important;
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/pargroot.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="pargroot.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <!-- Locaties -->
@@ -257,7 +257,7 @@ margin-top: -175px!important;
           <p>Groenstraat 18: <br> Diane Meeuwissen & Karolien Lemmens</p>
           </div>
           <div class="col m3">
-          <img class="responsive-img" src="images/tweede.jpg"></img>
+          <img class="responsive-img" src="tweede.jpg"></img>
           </div>
           <div class="col m5">
           <div class="video-container"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1484.9640395868757!2d5.545390451248495!3d51.24850960636273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c72afcdd2fddf3%3A0x4c874d5ff24b956c!2sGroenstraat%2018%2C%203930%20Hamont-Achel!5e0!3m2!1snl!2sbe!4v1585493358578!5m2!1snl!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
@@ -268,7 +268,7 @@ margin-top: -175px!important;
           <p>Molenstraat 41c: <br> Toon Clement, Lore Huijers & Anne Ceulemans</p>
           </div>
           <div class="col m3">
-          <img class="responsive-img" src="images/eerste.jpg"></img>
+          <img class="responsive-img" src="eerste.jpg"></img>
           </div>
           <div class="col m5">
           <div class="video-container"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2497.52440886099!2d5.536443215964898!3d51.24625323758401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c72ae515c3fa47%3A0x122588e6440b0c04!2sMolenstraat%2041c%2C%203930%20Hamont-Achel!5e0!3m2!1snl!2sbe!4v1585493678622!5m2!1snl!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
@@ -312,7 +312,7 @@ margin-top: -175px!important;
         </ul>
       </div>
     </div>
-    <div class="parallax"><img src="images/tweede.png" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="tweede.png" alt="Unsplashed background img 3"></div>
   </div>
 
 <!-- Footer -->
@@ -346,8 +346,8 @@ margin-top: -175px!important;
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="materialize.js"></script>
+  <script src="init.js"></script>
 
   </body>
 </html>
