--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ margin-top: -175px!important;
   <div class="container">
     <div class="row">
       <div class="m12">
-        <h7 class="left-align"><i class="tiny material-icons">phone</i> 0477/207876  <i class="tiny material-icons">timer</i> Ma-Vr 7:30 t/m 21:00  <i class="tiny material-icons">mail</i> info@motifit.be</h7>
+        <h7 class="left-align"><i class="tiny material-icons">phone</i> 0477/207876  <i class="tiny material-icons">timer</i> Ma-Vr 7:30 t/m 21:00  <i class="tiny material-icons">mail</i> dianemeeuwissen@gmail.com</h7>
       </div>
     </div>
   </div>
@@ -338,7 +338,7 @@ margin-top: -175px!important;
             <li><b>Anne Ceulemans</b>   </li>
             <li><i class="tiny material-icons">phone</i>   0473/403411</li>
 			<li><b>E-mail</b>   </li>
-            <li><i class="tiny material-icons">mail</i>   info@motifit.be</li>
+            <li><i class="tiny material-icons">mail</i>  dianemeeuwissen@gmail.com</li>
           </ul>
         </div>
       </div>
