--- a/index.html
+++ b/index.html
@@ -187,8 +187,6 @@ margin-top: -175px!important;
             </div>
 			
  <div class="row">	
- <div class="col m2">
- </div>
 <div class="col m4">
 			<div class="icon-block">
 				<h2 class="center brown-text"><img class="responsive-img circle" src="lore.jpg"></img></h2>
@@ -216,8 +214,20 @@ margin-top: -175px!important;
 			</div>
 </div>
 
-<div class="col m2">
- </div>
+<div class="col m4">
+			<div class="icon-block">
+				<h2 class="center brown-text"><img class="responsive-img circle" src="lore.jpg"></img></h2>
+				<h6 class="center">Lore Huijers</h6>
+					<p class="light">Specialisatie: <br>
+						<ol>
+							<li>Sportkinesitherapie</li>
+							<li>Dry needling</li>
+							<li>Taping</li>
+							<li>Manuele therapie</li>
+							<li>Kinecoach: sportbegeleiding voor personen met overgewicht en obesitas</li>
+						</ol> <br> <i class="material-icons">phone</i> 0471/302117</p>
+			</div>
+</div>
 </div>
 
 
