--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ margin-top: -175px!important;
           <div class="caption left-align marg1">
             <br><br>
               <h1 class="header center-align col m6 push-m6 white-text topachter">Welkom bij Motifit</h1>
-              <h6 class="header col m6 offset-m6 white-text topachter flow-text topachtertwee textje">Motifit is een kinepraktijk, gelegen op twee locaties in Hamont. In onze groepspraktijk werken we met 5 kinesitherapeuten, met elk onze eigen specialisaties. We volgen regelmatig bijscholingen om onze kennis en vaardigheden te verruimen, en op de hoogte te blijven van de nieuwste wetenschappelijke bevindingen. Tijdens de therapie staat de patiënt centraal en gaan we samen op zoek naar een gepaste behandelmethode. Naast de behandeling die we samen doorlopen, willen we de patiënten ook leren wat ze zélf kunnen doen om het herstel te bevorderen. Dat doen we door educatie en het aanleren van (thuis)oefeningen. Naast het gebruik van de oefenzaal tijdens de behandeling, staat de zaal ook ter beschikking voor de patiënt om zelfstandig te oefenen als aanvulling op de therapie.</h6>
+              <h6 class="header col m6 offset-m6 white-text topachter flow-text topachtertwee textje">Motifit is een kinepraktijk, gelegen op twee locaties in Hamont. In onze groepspraktijk werken we met 6 kinesitherapeuten, met elk onze eigen specialisaties. We volgen regelmatig bijscholingen om onze kennis en vaardigheden te verruimen, en op de hoogte te blijven van de nieuwste wetenschappelijke bevindingen. Tijdens de therapie staat de patiënt centraal en gaan we samen op zoek naar een gepaste behandelmethode. Naast de behandeling die we samen doorlopen, willen we de patiënten ook leren wat ze zélf kunnen doen om het herstel te bevorderen. Dat doen we door educatie en het aanleren van (thuis)oefeningen. Naast het gebruik van de oefenzaal tijdens de behandeling, staat de zaal ook ter beschikking voor de patiënt om zelfstandig te oefenen als aanvulling op de therapie.</h6>
             </div>
         </div>
       </div>
@@ -217,15 +217,11 @@ margin-top: -175px!important;
 <div class="col m4">
 			<div class="icon-block">
 				<h2 class="center brown-text"><img class="responsive-img circle" src="lore.jpg"></img></h2>
-				<h6 class="center">Lore Huijers</h6>
+				<h6 class="center">Isa Mertens</h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
-							<li>Sportkinesitherapie</li>
-							<li>Dry needling</li>
-							<li>Taping</li>
 							<li>Manuele therapie</li>
-							<li>Kinecoach: sportbegeleiding voor personen met overgewicht en obesitas</li>
-						</ol> <br> <i class="material-icons">phone</i> 0471/302117</p>
+						</ol> <br> <i class="material-icons">phone</i> 0498/723320</p>
 			</div>
 </div>
 </div>
@@ -264,7 +260,7 @@ margin-top: -175px!important;
       </div>
       <div class="row">
           <div class="col m4 align-left">
-          <p>Groenstraat 18: <br> Diane Meeuwissen & Karolien Lemmens</p>
+          <p>Groenstraat 18: <br> Diane Meeuwissen, Karolien Lemmens & Isa Mertens</p>
           </div>
           <div class="col m3">
           <img class="responsive-img" src="tweede.jpg"></img>
