--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ margin-top: -175px!important;
 						<ol>
 							<li>Bekkenbodemreëducatie</li>
               <li>Pre- en postnatale kinesitherapie</li>
-						</ol> <br><br> <i class="material-icons">phone</i> 0477/207876</p>
+						</ol> <br> <i class="material-icons">phone</i> 0477/207876</p>
             </div>
 </div>
 				
@@ -198,7 +198,7 @@ margin-top: -175px!important;
 							<li>Taping</li>
 							<li>Manuele therapie</li>
 							<li>Kinecoach: sportbegeleiding voor personen met overgewicht en obesitas</li>
-						</ol> <br> <i class="material-icons">phone</i> 0471/302117</p>
+						</ol> <i class="material-icons">phone</i> 0471/302117</p>
 			</div>
 </div>
  
@@ -221,7 +221,7 @@ margin-top: -175px!important;
 					<p class="light">Specialisatie: <br>
 						<ol>
 							<li>Manuele therapie</li>
-						</ol> <br> <i class="material-icons">phone</i> 0498/723320</p>
+						</ol> <br> <br> <br> <br> <br> <br> <i class="material-icons">phone</i> 0498/723320</p>
 			</div>
 </div>
 </div>
