--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ margin-top: -175px!important;
 
 <div class="col m4">
 			<div class="icon-block">
-				<h2 class="center brown-text"><img class="responsive-img circle" src="lore.jpg"></img></h2>
+				<h2 class="center brown-text"><img class="responsive-img circle" src="isa.jpeg"></img></h2>
 				<h6 class="center">Isa Mertens</h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
@@ -343,6 +343,8 @@ margin-top: -175px!important;
             <li><i class="tiny material-icons">phone</i>   0471/302117</li>
             <li><b>Anne Ceulemans</b>   </li>
             <li><i class="tiny material-icons">phone</i>   0473/403411</li>
+            <li><b>Isa Mertens</b>   </li>
+            <li><i class="tiny material-icons">phone</i>   0498/723320</li>
 			<li><b>E-mail</b>   </li>
             <li><i class="tiny material-icons">mail</i>  dianemeeuwissen@gmail.com</li>
           </ul>
