--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ margin-top: -175px!important;
 
 <div class="col m4">
 			<div class="icon-block">
-				<h2 class="center brown-text"><img class="responsive-img circle" src="isa.jpeg"></img></h2>
+				<h2 class="center brown-text"><img class="responsive-img circle" src="isa.jpg"></img></h2>
 				<h6 class="center">Isa Mertens</h6>
 					<p class="light">Specialisatie: <br>
 						<ol>
